Fixed disabling of blurred objects

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2011,4 +2011,7 @@ p {
     filter: blur(12px);
     transition: .3s ease-in-out;
     pointer-events: none;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
